# e_istichara_monitor

./: README.md  istichara.sqlite  pyproject.toml
e_istichara_monitor/: istichara.py
