[tool.poetry]
name = "e_istichara_monitor"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghedamsi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
requests = "^2.27.1"
schedule = "^1.1.0"
tenacity = "^8.0.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
